Mon Oct 20 01:57:16 CEST 2003
----------------------------------
  * sigtool: receive digital signature from remote ClamAV Signing Service
  * libclamav: small cvd fixes

Fri Oct 17 05:08:22 CEST 2003 (tk)
----------------------------------
  * new Spanish documentation on ClamAV + Sendmail integration by
    Erick Ivaan Lopez Carreon
  * freshclam: share cfgfile.o with clamd. Makefile conditions allow building
	       without clamd (if pthread library is not available). The problem
	       with outdated cfgfile.c in freshclam was reported by Jim C.
  * clamd: fixed a segmentation fault with TCPAddr. Problem reported by
	   Stefan Kaltenbrunner and fixed by Damien Curtain.
  * libclamav: zziplib downgroaded to 0.10.81 with Martin Schitter's hardening
	       patches
  * sigtool: major stability fixes

Sun Oct 12 21:14:21 BST 2003 (njh)
---------------------------------
  * libclamav: mbox.c now uses NO_STRTOK_R consistently with message.c
  		Patch by Bernd Kuhls <spiralvoice@hotmail.com>

Sun Oct 12 19:46:18 CEST 2003 (tk)
----------------------------------
  * libclamav: Makefile: do not overwrite CFLAGS

Sun Oct 12 09:37:44 BST 2003 (njh)
---------------------------------
  * libclamav: handles Eicar found in Appledouble files, though Appledouble
  		files are not yet handled
  * clamav-milter: use VERSION info to talk to clamd not PING/PONG
  		Only close fd 0/1/2 if !Foreground
		Sanity checking now performed on LocalSocket as well as TCPSocket

Sat Oct 11 16:42:42 BST 2003 (njh)
---------------------------------
  * clamav-milter: fixed possible crash with long e-mail addresses
  		Removed call to clamdscan to get version

Thu Oct  9 15:18:44 CEST 2003 (tk)
----------------------------------
  * configure.in: added -lresolv to CLAMD_LIBS on Solaris

Wed Oct  8 14:49:40 CEST 2003 (tk)
----------------------------------
  * libclamav: CVS: commited missing files

Wed Oct  8 12:39:26 CEST 2003 (tk)
----------------------------------