@@ -138,6 +138,7 @@ Changes
 0.60m	12/10/03 Now does sanity check if using localSocket
 		Gets version info from clamd
 		Only reset fd's 0/1/2 if !ForeGround
+0.60n	22/10/03 Call pthread_cont_broadcast more often
 
 BUG REPORTS
 
