@@ -1,3 +1,7 @@
+Wed Oct 22 20:44:29 BST 2003 (njh)
+---------------------------------
+  * clamav-milter: more calls to pthread_cond_broadcast
+
 Mon Oct 20 01:57:16 CEST 2003
 ----------------------------------
   * sigtool: receive digital signature from remote ClamAV Signing Service
